<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">


    <LinearLayout
        android:layout_width="413dp"
        android:layout_height="634dp"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <TextView
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/stay_connected"
            android:textColor="#8E44AD"
            android:textSize="25sp" />

        <TextView
            style="@style/TextAppearance.AppCompat.Body1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/enter_your_email_address_and_password_to_access_your_account"
            android:textColor="#B2B2B2" />

        <EditText
            android:id="@+id/etsignemail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/edittext_logincustom"
            android:ems="10"
            android:hint="@string/email"
            android:textColor="#bcbbff"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etsignPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@drawable/edittext_logincustom"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="#bcbbff"
            android:inputType="textWebPassword" />

        <EditText
            android:id="@+id/etConformPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/edittext_logincustom"
            android:ems="10"
            android:hint="@string/password"
            android:textColor="#bcbbff"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btnsignup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/sign_up" />

        <TextView
            android:id="@+id/btn_Login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/already_have_an_account_login"
            android:textAlignment="center"
            android:textColor="#424e63" />


    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-4dp"
        android:src="@drawable/ic_wave__large"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="634dp"/>






</RelativeLayout>